--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,7 +6,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+      - name: NPM Install
+        run: npm install
       - name: Run ServeRest
-      - run: npx serverest@latest
+        run: npx serverest@latest
       - name: Cypress run
         uses: cypress-io/github-action@v2
