--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,9 +6,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: NPM Install
-        run: npm install
+        
+      - name: Install ServeRest
+        run: npm i serverest
+        
       - name: Run ServeRest
-        run: npx serverest@latest
+        run: (npx serverest@latest &)
+        
       - name: Cypress run
         uses: cypress-io/github-action@v2
