--- a/.github/workflows/cypress-api.yml
+++ b/.github/workflows/cypress-api.yml
@@ -1,17 +1,21 @@
 name: API Rest tests
-on: [push]
+
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
+
 jobs:
   cypress-run:
-    runs-on: ubuntu-16.04
+
+    runs-on: ubuntu-18.04
+
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-        
-      - name: Install ServeRest
-        run: npm i serverest
-        
+
       - name: Run ServeRest
-        run: (npx serverest@latest &)
-        
+        run: docker run -d -p 3000:3000 paulogoncalvesbh/serverest:latest
+
       - name: Cypress run
         uses: cypress-io/github-action@v2
